--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -93,7 +93,7 @@
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
+                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'app_delete' app.serial %}', '{% trans 'Delete app' %} : {{app.name}}', '{% trans 'Do you want to delete this app ?' %}', true)">
                                         {% trans 'Delete' %}
                                         <i class="bi bi-trash float-end"></i>
                                     </span>
