--- a/templates/file/files.html
+++ b/templates/file/files.html
@@ -7,12 +7,12 @@
 {% block content %}
 <div class="bg-white shadow-sm rounded p-3 mb-3 position-relative">
     <div id="files">
-        {% include 'app/inc/files-list.html' %}
+        {% include 'file/list.html' %}
     </div>
     {% include 'inc/preloader2.html' %}
 </div>
 <div class="bg-white shadow-sm rounded p-3">
-    {% include 'app/inc/upload.html' %}
+    {% include 'file/upload.html' %}
 </div>
 
 <script>
