--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -72,6 +72,13 @@
                             <i class="bi bi-gear fs-4 pointer" data-bs-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
+                                    <a class="dropdown-item" href="{% url 'app_log' app.serial %}" >
+                                        {% trans 'Log' %}
+                                        <i class="bi bi-file-text float-end"></i>
+                                    </a>
+                                </li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
                                     <a class="dropdown-item" href="{% url 'app_edit' app.serial %}">
                                         {% trans 'Edit' %}
                                         <i class="bi bi-pencil-square float-end"></i>
