--- a/templates/file/list.html
+++ b/templates/file/list.html
@@ -54,27 +54,28 @@
                 </div>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                        <a class="dropdown-item text-success" href="{% url 'app_file_preview'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'app_file_preview'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Preview' %}
                             <i class="bi bi-eye float-end"></i>
                         </a>
                     </li>
                     <li><hr class="dropdown-divider"></li>
                     <li>
-                        <a class="dropdown-item text-success" href="{% url 'app_file_download'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'app_file_download'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Download' %}
                             <i class="bi bi-download float-end"></i>
                         </a>
                     </li>
+                    {% if file.lower|slice:'-3:' == "txt" or file.lower|slice:'-2:' == "py" or file.lower|slice:'-3:' == "log" or file.lower|slice:'-3:' == "ini" or file.lower|slice:'-4:' == "html" or file.lower|slice:'-3:' == "css" or file.lower|slice:'-2:' == "js" or file.lower|slice:'-4:' == "json" %}
                     <li><hr class="dropdown-divider"></li>
                     <li>
-                        {% if file.lower|slice:'-3:' == "txt" or file.lower|slice:'-2:' == "py" or file.lower|slice:'-3:' == "log" or file.lower|slice:'-3:' == "ini" or file.lower|slice:'-4:' == "html" or file.lower|slice:'-3:' == "css" or file.lower|slice:'-2:' == "js" or file.lower|slice:'-4:' == "json" %}
-                        <a class="dropdown-item text-success" href="{% url 'app_file_edit'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'app_file_edit'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Edit' %}
                             <i class="bi bi-pencil float-end"></i>
                         </a>
-                    {% endif %}
                     </li>
+                    <li><hr class="dropdown-divider"></li>
+                    {% endif %}
                     {% if file.lower|slice:'-3:' == "zip" %}
                     <li>
                         <span class="extract-zip dropdown-item pointer" data-folder="false" data-file="{{path}}/{{file}}">
@@ -82,12 +83,14 @@
                             <i class="bi bi-folder-symlink float-end"></i>
                         </span>
                     </li>
+                    <li><hr class="dropdown-divider"></li>
                     <li>
                         <span class="extract-zip dropdown-item pointer" data-folder="true" data-file="{{path}}/{{file}}" data-file-name="{{file}}">
                             {% trans 'Extract to folder' %}
                             <i class="bi bi-folder-symlink float-end"></i>
                         </span>
                     </li>
+                    <li><hr class="dropdown-divider"></li>
                     {% endif %}
                     <li>
                         <span class="remove-file dropdown-item pointer text-danger" data-file="{{path}}/{{file}}">
